Registration and login forms

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,21 +24,21 @@
     </div>
 
     <div class="flex items-center relative">
-      <button *ngIf="this.isLanding" class="welcome mx-2 bg-white border-2 rounded-md border-blue-500 text-blue-500">
+      <button *ngIf="this.isLanding" routerLink="login" class="welcome mx-2 bg-white border-2 rounded-md border-blue-500 text-blue-500">
         Войти
       </button>
-      <button *ngIf="this.isLanding" class="welcome mx-2 mr-8 bg-blue-500 border-2 rounded-md border-blue-500 text-white">
+      <button *ngIf="this.isLanding" routerLink="registration" class="welcome mx-2 mr-8 bg-blue-500 border-2 rounded-md border-blue-500 text-white">
         Регистрация
       </button>
-      <button *ngIf="!this.isLanding" class="mx-2 mr-8" (click)="toggleNavigation()">
+      <button *ngIf="!this.isLanding" class="mx-2 mr-8" (click)="toggleModalById('navigation')">
         <img src="./assets/images/main/burger.svg" class="mx-auto">
       </button>
 
-      <div id="navigation" class="hidden absolute bg-white border-black border-1 w-64 right-16 top-16 rounded-3xl p-4">
+      <div id="navigation" class="hidden absolute bg-white border-1 border-gray-400 w-64 right-16 top-16 rounded-3xl p-4">
         <div>Ваше имя</div>
         <hr class="mb-2">
-        <div><button routerLink="profile" (click)="toggleNavigation()">Мой профиль</button></div>
-        <div><button routerLink="reviews" (click)="toggleNavigation()">Отзывы</button></div>
+        <div><button routerLink="profile" (click)="toggleModalById('navigation')">Мой профиль</button></div>
+        <div><button routerLink="reviews" (click)="toggleModalById('navigation')">Отзывы</button></div>
       </div>
     </div>
   </div>
