Last change for today

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -23,7 +23,7 @@
           <div><a href="/registration">Регистрация</a></div>
           <div><a href="/registration">Забыли пароль?</a></div>
         </div>
-        <button class="welcome bg-blue-500 border-2 rounded-md border-blue-500 text-white">
+        <button (click)="login()" class="welcome bg-blue-500 border-2 rounded-md border-blue-500 text-white">
           Подтвердить</button>
       </div>
     </div>
