--- a/src/app/main/registration/registration.component.html
+++ b/src/app/main/registration/registration.component.html
@@ -30,7 +30,7 @@
         <div class="flex justify-between gap-6">
           <div><a href="/login">Войти</a></div>
         </div>
-        <button class="welcome bg-blue-500 border-2 rounded-md border-blue-500 text-white">
+        <button (click)="registrate()" class="welcome bg-blue-500 border-2 rounded-md border-blue-500 text-white">
           Подтвердить</button>
       </div>
     </div>
