--- a/src/app/main/reviews/reviews-block/reviews-block.component.html
+++ b/src/app/main/reviews/reviews-block/reviews-block.component.html
@@ -3,7 +3,7 @@
 
   <div *ngIf="AppId !== 'new'" class="w-11/12 h-full overflow-auto flex-1">
     <div class="overflow-auto flex-1">
-    <div *ngFor="let review of Reviews" class="rounded-xl p-2 mb-4 bg-gray-100">
+    <div *ngFor="let review of Reviews" class="rounded-xl p-2 mb-4 bg-gray-100 border-1 border-gray-400">
       <div class="flex"><img src="./assets/images/main/example/user-avatar.svg" class="h-4 rounded-full my-auto bg-white">{{review.username}} пишет:</div>
       <div class="pl-4 whitespace-pre-wrap">{{review.text}}</div>
     </div>
