--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,7 +10,7 @@
             <p class="text-outline">{{slide.title}}</p>
             <span class="{{slide.image}} text-3xl mt-4 p-1">{{slide.description}}</span>
           </div>
-        <button routerLink="/reviews" class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
+        <button routerLink="/registration" class="bg-gradient-to-b join-button rg-color-gradient px-5 py-4 rounded-full text-white">
           Присоединиться
         </button>
       </div>
@@ -52,22 +52,6 @@
               alt="{{integration.name}}">
         </div>
       </div>
-    </div>
-  </div>
-  <div class="sm:p-36 sm:pt-28" id="what-we-can-do">
-    <div class="text-center text-5xl mb-11">
-      Наши услуги:
-    </div>
-    <div class="text-center text-4xl pb-10">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-    </div>
-    <div class="flex flex-wrap justify-between">
-      <div class="bg-gray-700 h-40 w-96 m-1"></div>
-      <div class="bg-gray-700 h-40 w-96 m-1"></div>
-      <div class="bg-gray-700 h-40 w-96 m-1"></div>
-      <div class="bg-gray-700 h-40 w-96 m-1"></div>
-      <div class="bg-gray-700 h-40 w-96 m-1"></div>
-      <div class="bg-gray-700 h-40 w-96 m-1"></div>
     </div>
   </div>
   <app-footer></app-footer>
