--- a/src/app/main/registration/registration.component.html
+++ b/src/app/main/registration/registration.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="my-2">
         <label for="login-email">Как вас называть</label><br>
-        <input class="w-full" type="text" autocomplete="name" id="reg-email">
+        <input class="w-full" type="text" autocomplete="name" id="reg-name">
       </div>
       <div class="my-2">
         <label for="login-email">Email</label><br>
